--- a/.github/workflows/trigger-send-reminders.yml
+++ b/.github/workflows/trigger-send-reminders.yml
@@ -1,15 +1,14 @@
-name: Trigger Reminder Cron
+name: Send Study Reminders
 
 on:
   schedule:
-    - cron: "0 9 * * *"   # runs every day at 9 AM UTC
-  workflow_dispatch:       # allows manual trigger
+    - cron: "*/5 * * * *"   # every 5 min UTC
+  workflow_dispatch:
 
 jobs:
-  send-reminders:
+  reminders:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Call your Vercel API route
+      - name: Call API
         run: |
-          curl -X POST "https://manish-reminder-app.vercel.app/api/send-email"
+          curl -X GET "https://quiet-hours-scheduler.vercel.app/api/cron/send-reminders?cron_secret=${{ secrets.CRON_SECRET }}"
